# python-project-50

./: .coveragerc  README.md  makefile  pyproject.toml  sonar-project.properties
.github/workflows/: checks.yml  coverage.yml
gendiff/: gendiff.py  parsing_files.py
gendiff/scripts/: gendiff.py  gendiff_script.py
scripts/: gendiff.py
tests/: test_generate_diff.py  test_read.py
tests/test_data/: example.json  flat_json_expected.py
